# rotter

./: .gitignore  AUTHORS  ChangeLog  INSTALL  Makefile.am  README  README.md  TODO  autogen.sh  configure.ac  rotter.1.txt
src/: Makefile.am  deletefiles.c  dir.c  hostname.c  id3.c  jack.c  lame.c  mpegaudiofile.c  rotter.c  rotter.h  sndfile.c  twolame.c
trunk/: AUTHORS  ChangeLog  INSTALL  TODO  autogen.sh  configure.ac  rotter.1.txt
trunk/src/: deletefiles.c  jack.c  rotter.c  sndfile.c
